Make interaction with VirusTotal API